Fixed horizontal scrollbars showing when they shouldn't

--- a/assets/css/changelog.css
+++ b/assets/css/changelog.css
@@ -19,7 +19,7 @@
 	top: 100px;
 	left: 0;
 
-	width: 100vw;
+	width: 100%;
 }
 
 .changelogwrapper .insidechangelog {
