--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -49,7 +49,7 @@ body.prompt {
 
 .main {
 	position: absolute;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	max-height: -webkit-fill-available;
 }
