--- a/assets/css/mods.css
+++ b/assets/css/mods.css
@@ -78,7 +78,7 @@ table th {
 	position: absolute;
 	z-index: 5;
 	left: 0;
-	width: 100vw;
+	width: 100%;
 
 	margin-top: 60px;
 
@@ -99,9 +99,7 @@ table th {
 
 .modlist {
 	position: relative;
-	left: 1vw;
-
-	width: 98vw;
+	width: 100%;
 
 	margin-top: 5px;
 	margin-bottom: 60px;
